--- a/Лабы/Лаб3/python-ui-database/docker-compose.yml
+++ b/Лабы/Лаб3/python-ui-database/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3"
 services:
   app:
-    build: app
-    links:
+    build: ./app  # контекст для сборки, по-умолчанию ищет Dockerfile в этой директории
+    links: # связь контейнеров друг с другом, один из способов организации сетевого взаимодействия
       - db
-    ports:
+    ports:  # проброс портов <Host>:<Container>
       - "8090:5000"
 
   db:
     image: mysql:5.7
     ports:
       - "32000:3306"
-    volumes:
+    volumes: # привязка каталога на диске хост машины к контейнеру
       - ./db:/docker-entrypoint-initdb.d/:ro
 
   phpmyadmin:
