--- a/Лабы/Лаб6/ansible/multiplehosts/playbook-balancer.yml
+++ b/Лабы/Лаб6/ansible/multiplehosts/playbook-balancer.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Setup proxy balancer for remote heosts
+- name: Setup proxy balancer for remote hosts
   hosts: workers 
   become: true
   vars:
