Лаб3: поправил docker-compose

--- a/Лабы/Лаб3/python-ui-database/docker-compose.yml
+++ b/Лабы/Лаб3/python-ui-database/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - "32000:3306"
     volumes: # привязка каталога на диске хост машины к контейнеру
       - ./db:/docker-entrypoint-initdb.d/:ro
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
