--- a/Лабы/Лаб6/ansible/ansible.cfg
+++ b/Лабы/Лаб6/ansible/ansible.cfg
@@ -2,6 +2,5 @@
 # disable host_key_checking
 # # https://docs.ansible.com/ansible/latest/user_guide/connection_details.html#host-key-checking
 host_key_checking = False
-#
-inventory=inventory
-# # inventory=inventory_file # use -i or env var ANSIBLE_INVENTORY to override
+# custom inventory file
+inventory=/inventory
