--- a/Лабы/Лаб6/docker-compose.yml
+++ b/Лабы/Лаб6/docker-compose.yml
@@ -8,5 +8,8 @@ services:
   ansible:
     build:
       context: ./ansible
+    volumes:
+      - ./ansible/inventory:/inventory
+      - ./ansible/ansible.cfg:/etc/ansible/ansible.cfg
     depends_on:
       - app
