--- a/Лабы/Лаб6/ssh-agent/Dockerfile
+++ b/Лабы/Лаб6/ssh-agent/Dockerfile
@@ -2,8 +2,9 @@ FROM ubuntu:20.04
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/Moscow
 RUN apt-get update && apt-get install -y openssh-server
-RUN sed -i 's/PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+RUN echo "root:root" | chpasswd
 
-RUN useradd -m -s /bin/bash app
-RUN echo "app:app" | chpasswd
+EXPOSE 5000 3306
+
 ENTRYPOINT service ssh start && tail -f /dev/null
