--- a/Лабы/Лаб6/ansible/playbooks/playbook-database.yml
+++ b/Лабы/Лаб6/ansible/playbooks/playbook-database.yml
@@ -1,44 +1,63 @@
 ---
 - hosts: database
   tasks:
-    - name: install mysql
-      apt:
-          name: mysql
-          update_cache: yes
-          cache_valid_time: 3600
-          state: present
-    - name: start up the mysql service
-      shell: "service mysql start"
-    - name: ensure mysql is enabled to run on startup
-      service:
-          name:mysql
-          state:started
-          enabled:true
-    - name: update mysql root password for all root accounts
-      mysql_user:
-          name: root
-          host: "{{ item }}"
-          password: "{{ mysql_root_password }}"
-          login_user: root
-          login_password: "{{ mysql_root_password }}"
-          check_implicit_admin: yes
-          priv: "*.*:ALL,GRANT"
+    - name: Install MySQL and other required packages
+      apt: name={{ item }} update_cache=yes cache_valid_time=3600 state=present
       with_items:
-          - "{{ ansible_hostname }}"
-          - 127.0.0.1
-          - ::1
-          - localhost
-    - name: create a new database
-      mysql_db:
-          name: testdb
-          state: present
-          login_user: root
-          login_password: "{{ mysql_root_password }}"
+        - python3-pip
+        - mysql-server
+    - name: Stop the MySQL service(if was running)
+      service:
+        name: mysql
+        state: stopped
+        enabled: true
 
-    - name: add sample data to database
+    - name: Save root password in .my.cnf - to access locally from the host
+      template:
+        src: mysql/root_cnf.j2
+        dest: /root/.my.cnf
+        owner: root
+        mode: '0600'
+
+    - name: copy permissions
       copy:
-          src:dump.sql
-          dest:/tmp/dump.sql
+        src: mysql/permissions.sql
+        dest: /tmp/permissions.sql
+
+    - name: apply permissions
+      mysql_db:
+        name: testdb
+        state: import
+        target: /tmp/permissions.sql
+        login_user: root
+        login_password: "{{ mysql_root_password }}"
+
+    - name: Start the MySQL service
+      service:
+        name: mysql
+        state: started
+        enabled: true
+
+    - name: Make sure pymysql is present
+      become: true # needed if the other tasks are not played as root
+      pip:
+        name: pymysql
+        state: present
+
+    - name: Set password for root user
+      mysql_user:
+        name: "root"
+        password: "{{ mysql_root_password }}"
+        priv: '*.*:ALL,GRANT'
+        host: 'localhost'
+        login_unix_socket: /var/run/mysqld/mysqld.sock
+        state: present
+
+    - name: add sample data to database host
+      copy:
+        src: mysql/dump.sql
+        dest: /tmp/dump.sql
+
     - name: insert sample data into database
       mysql_db:
           name: testdb
