--- a/Лабы/Лаб6/lab6-agent/Dockerfile
+++ b/Лабы/Лаб6/lab6-agent/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/Moscow
-RUN apt-get update && apt-get install -y openssh-server
+RUN apt-get update && apt-get install -y openssh-server python3-pip inetutils-ping net-tools curl
 RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 RUN echo "root:root" | chpasswd
 
