--- a/Лабы/Лаб6/docker-compose.yml
+++ b/Лабы/Лаб6/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     image: lab6-agent
     ports:
-      - "8080-8090:5000"
+      - "8081-8090:5000"
       - "3300-3310:3306"
   ansible:
     build:
@@ -15,3 +15,7 @@ services:
       - ./ansible/ansible.cfg:/etc/ansible/ansible.cfg
     depends_on:
       - app
+    ports:
+      - "8080:8080"
+    expose:
+      - 5000
